# satellite-bt-super-resolution

./: .gitignore  CITATION.cff  LICENSE  MODEL_CARD.md  MODEL_LICENSE.md  NOTICE  README.md  environment.yml  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
beginner_guide/: README.md
beginner_guide/notebooks/: 01_use_pretrained_keras_models.ipynb
configs/: rrdn_composite_ssim_alpha_0.8.yaml  rrdn_gan_batchnorm.yaml
docs/: DATA.md
github_case/: atms_example.py
legacy/model_definitions/: __init__.py  rrdn_chen.py
metadata/: unified_global_stats.json  unified_global_stats.npz
release_assets/: README.md  SHA256SUMS.txt
sample_data/: README.md  amsr2_example.h5
scripts/: README.md  __init__.py
scripts/evaluation/: __init__.py  geo_plotting.py  metrics.py  plot_predictions.py  plot_selected_model_residuals.py
scripts/inference/: __init__.py  make_prediction.py
scripts/training/: __init__.py  train_gan.py  train_rrdn.py
src/bt_super_resolution/: __init__.py  config.py  loader.py  normalization.py
src/bt_super_resolution/models/: __init__.py  discriminator.py  rdn_chen.py  rrdn.py  rrdn_chen.py
tests/: test_loader.py  test_models.py  test_release_artifacts.py  test_sample_data.py
tools/: create_sample_data.py  export_keras_model.py  inspect_h5_files.py  inspect_model_file.py
